Logs screen. basic implementation

--- a/src/locales/pl.json
+++ b/src/locales/pl.json
@@ -25,7 +25,7 @@
     "dashboard": "Panel",
     "settings": "Ustawienia",
     "databases": "Bazy danych",
-    "cmd": "CMD",
+    "cmd": "CMD & akcje",
     "logs": "Logi"
   },
   "settings": {
