--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -25,7 +25,7 @@
     "dashboard": "Dashboard",
     "settings": "Settings",
     "databases": "Databases",
-    "cmd": "CMD",
+    "cmd": "CMD & Actions",
     "logs": "Logs"
   },
   "settings": {
