Databases screen. basic implementation

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -26,6 +26,11 @@
     "lastUpdate": "Last update {{value}}",
     "refresh": "Refresh"
   },
+  "databases": {
+    "title": "Databases",
+    "lastUpdate": "Last update {{value}}",
+    "refresh": "Refresh"
+  },
   "navbar": {
     "dashboard": "Dashboard",
     "settings": "Settings",
