server actions (restart & boost) + snackbar

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -31,6 +31,9 @@
     "lastUpdate": "Last update {{value}}",
     "refresh": "Refresh"
   },
+  "cmd": {
+    "title": "CMD & Actions"
+  },
   "navbar": {
     "dashboard": "Dashboard",
     "settings": "Settings",
